--- a/_quarto.yml
+++ b/_quarto.yml
@@ -60,6 +60,7 @@ format:
     callout-appearance: simple
     link-external-icon: false
     link-external-newwindow: false
+    # csl: csl/test.csl
     csl: csl/english-apa-author-date.csl
     theme: [cosmo, brand, scss/styles.scss]
 
