Add test websiste

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,8 +1,8 @@
 editor: source
 
 execute:
-  cache: false
-  freeze: false
+  cache: false # "Danger Will Robinson!"
+  freeze: false # If you plan to use it, remember to disable it afterward!
 
 project:
   type: website
@@ -12,7 +12,6 @@ project:
 title: "Test"
 author: "Daniel Vartanian"
 date: today
-date-format: "YYYY-MM-DD"
 
 website:
   favicon: images/favicon.png
@@ -25,9 +24,37 @@ website:
   site-url: https://danielvartan.github.io/test/
   issue-url: https://github.com/danielvartan/test/issues/
   repo-branch: main
+  repo-actions: [edit, source, issue]
+  navbar:
+      title: false
+      background: "#1e4897"
+      right:
+        - icon: github
+          href: https://github.com/danielvartan/test/
+          aria-label: GitHub
+
+lightbox:
+  match: auto
+  effect: fade
+  desc-position: bottom
+  loop: false
 
 format:
-  revealjs:
+  html:
+    toc: true
+    toc-depth: 5
+    toc-location: right
     locale: en
+    language: en-us
+    code-fold: true
+    code-link: true
+    code-tools: false
+    df-print: paged
+    fig-align: center
+    cap-location: top
+    lightbox: true
+    callout-appearance: simple
+    csl: csl/english-apa-author-date.csl
+    theme: [cosmo]
 
 google-scholar: false
